--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -11,19 +11,19 @@
 
   tasks:
 
-  - name: Delete data directories
-    file:
-      path: ./{{item}}
-      state: absent
-    with_items:
-      - 'data'
-      - 'data'
-      - 'fragments'
+  # - name: Delete data directories
+  #   file:
+  #     path: ./{{item}}
+  #     state: absent
+  #   with_items:
+  #     - 'data'
+  #     - 'data'
+  #     - 'fragments'
 
-  - name: Create data directories
-    file:
-      path: ./data/fragments
-      state: directory
+  # - name: Create data directories
+  #   file:
+  #     path: ./data/fragments
+  #     state: directory
 
   # - name: Copy & prepare the uploaded input Excel file
   #   copy:
@@ -36,21 +36,21 @@
   #   tags:
   #     - excel
 
-  - name: Create system fabric model from spreadsheet data
-    template:
-      src: "./templates/{{item}}_system_fabric.j2"
-      dest: "./data/fragments/{{item}}_system_fabric.yml"
-    with_items:
-      - "01"
+  # - name: Create system fabric model from spreadsheet data
+  #   template:
+  #     src: "./templates/{{item}}_system_fabric.j2"
+  #     dest: "./data/fragments/{{item}}_system_fabric.yml"
+  #   with_items:
+  #     - "01"
 
-  - name: Assemble fabric model
-    assemble:
-      src: "./data/fragments/"
-      dest: "./data/system_fabric.yml"
+  # - name: Assemble fabric model
+  #   assemble:
+  #     src: "./data/fragments/"
+  #     dest: "./data/system_fabric.yml"
 
-  - name: load data
-    include_vars:
-      file: "./data/system_fabric.yml"
+  # - name: load data
+  #   include_vars:
+  #     file: "./data/system_fabric.yml"
 
   # - name: Provision list of compute managers
   #   nsxt_fabric_compute_managers:
