--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -223,5 +223,5 @@
 
   - name: test
     debug:
-      msg: "{{item}}"
-    with_items: "{{vars.uplinkprofs['active-uplinks']}}"
+      msg: "{{item.active-uplinks}}"
+    with_items: "{{uplinkprofs}}"
