--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -5,7 +5,7 @@
   gather_facts: no
   vars:
     uplinkprofs:
-      - {"name": "actv-actv-4nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [5,6,7] }
+      - {"name": "actv-actv-4nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2,3,4] }
       # - {"name": "actv-actv-2nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2] }
       # - {"name": "actv-stdby-2nics", "policy": "FAILOVER_ORDER", "active-uplinks": [1,2]}
 
@@ -202,10 +202,11 @@
       username: "{{nsx_username}}"
       password: "{{nsx_password}}"
       validate_certs: False
-      display_name: "UplinkProfl-compute"
+      display_name: "UplinkProfl-compute-{{item.name}}"
       mtu: 1600
       resource_type: "UplinkHostSwitchProfile"
-      teaming: {policy: LOADBALANCE_SRCID, active_list: [{uplink_name: "uplink1", uplink_type: PNIC}, {uplink_name: "uplink2", uplink_type: PNIC}] }
+      teaming: 
+      teaming:  {policy: "{{item.policy}", active_list: [{% for link in item.active-uplinks if item.active-uplinks%}{%if not loop.last%}{uplink_name: "uplink{{link}}", uplink_type: PNIC},{%else%}{uplink_name: "uplink{{link}}", uplink_type: PNIC}{%endif%}  {%endfor%}] }
       #   policy: LOADBALANCE_SRCID
       #   active_list:
       #     - uplink_name: "uplink-{{item.1}}"
@@ -218,8 +219,8 @@
       transport_vlan: "{{overlay_vlan|default(0)}}"
       state: "present"
     # loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
-    # # loop:  
-    # #   - "{{uplinkprofs['active-uplinks']}}"
+    loop:  
+      - "{{uplinkprofs}}"
 
 
   # - name: test
