--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -204,9 +204,8 @@
       validate_certs: False
       display_name: "UplinkProfl-compute-{{item.name}}"
       mtu: 1600
-      resource_type: "UplinkHostSwitchProfile"
-      teaming: 
-      teaming:  {policy: "{{item.policy}", active_list: [{% for link in item.active-uplinks if item.active-uplinks %}{% if not loop.last %}{uplink_name: "uplink-{{link}}", uplink_type: 'PNIC'},{% elif loop.last %}{uplink_name: "uplink-{{link}}", uplink_type: 'PNIC'}{% endif %}  {%endfor%}] }
+      resource_type: "UplinkHostSwitchProfile" 
+      teaming: "{{item.tm}}"
       #   policy: LOADBALANCE_SRCID
       #   active_list:
       #     - uplink_name: "uplink-{{item.1}}"
@@ -220,7 +219,9 @@
       state: "present"
     # loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
     loop:  
-      - "{{uplinkprofs}}"
+      - {"name": "actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "uplink1", uplink_type: 'PNIC'},{uplink_name: "uplink2", uplink_type: 'PNIC'},{uplink_name: "uplink3", uplink_type: 'PNIC'},{uplink_name: "uplink4", uplink_type: 'PNIC'}] }
+      # - {"name": "actv-actv-2nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2] }
+      # - {"name": "actv-stdby-2nics", "policy": "FAILOVER_ORDER", "active-uplinks": [1,2]}
 
 
   # - name: test
