--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -206,20 +206,11 @@
       mtu: 1600
       resource_type: "UplinkHostSwitchProfile" 
       teaming: "{{item.tm}}"
-      #   policy: LOADBALANCE_SRCID
-      #   active_list:
-      #     - uplink_name: "uplink-{{item.1}}"
-      #       uplink_type: PNIC
-      #   standby_list:
-      # # {% for link in item['standby-uplinks'] if item['standby-uplinks'] %}
-      # #     - uplink_name: "uplink-{{link}}"
-      # #       uplink_type: PNIC
-      # # {% endfor %}       
       transport_vlan: "{{overlay_vlan|default(0)}}"
       state: "present"
     # loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
     loop:  
-      - {"name": "actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "uplink1", uplink_type: 'PNIC'},{uplink_name: "uplink2", uplink_type: 'PNIC'},{uplink_name: "uplink3", uplink_type: 'PNIC'},{uplink_name: "uplink4", uplink_type: 'PNIC'}] }
+      - {"name": "actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "uplink1", uplink_type: 'PNIC'},{uplink_name: "uplink2", uplink_type: 'PNIC'},{uplink_name: "uplink3", uplink_type: 'PNIC'},{uplink_name: "uplink4", uplink_type: 'PNIC'}]} }
       # - {"name": "actv-actv-2nics", "policy": "LOADBALANCE_SRCID", "active-uplinks": [1,2] }
       # - {"name": "actv-stdby-2nics", "policy": "FAILOVER_ORDER", "active-uplinks": [1,2]}
 
