--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -204,10 +204,12 @@
       validate_certs: False
       display_name: "UplinkProfl-compute-{{item.name}}"
       mtu: 1600
-      resource_type: "UplinkHostSwitchProfile" 
+      resource_type: "UplinkHostSwitchProfile"
+      state: "present"      
+      send_enabled: true
       teaming: "{{item.tm}}"
       transport_vlan: "{{overlay_vlan|default(0)}}"
-      state: "present"
+      named_teamings: "{{item.ntm|default(omit)}}"
     loop:  
       - {"name": "actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "uplink1", uplink_type: 'PNIC'},{uplink_name: "uplink2", uplink_type: 'PNIC'},{uplink_name: "uplink3", uplink_type: 'PNIC'},{uplink_name: "uplink4", uplink_type: 'PNIC'}]} }
       - {"name": "actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "uplink1", uplink_type: 'PNIC'},{uplink_name: "uplink2", uplink_type: 'PNIC'}]} }
