--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -254,7 +254,7 @@
 
   - name: Test variables
     debug:
-      msg:   -  "{{item.1.key}}: {{item.1.value}}" 
+      msg:  "- {{item.1.key}}: {{item.1.value}}" 
     with_subelements:
       - "{{ system_fabric.compute_transp_nodes}}"
       - "{{ lookup('dict', userssystem_fabric.compute_transp_nodes.pnics) }}"
