--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -255,7 +255,7 @@
   - name: Test variables
     debug:
       msg:  "- {{item.1.key}}: {{item.1.value}}" 
-    with_subelements:
+    with_nested:
       - "{{ system_fabric.compute_transp_nodes}}"
       - "{{ system_fabric.compute_transp_nodes.pnics}}"      
       # - "{{ lookup('dict', userssystem_fabric.compute_transp_nodes.pnics) }}"
