--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -258,6 +258,6 @@
       msg: "{{item.1}}"
     with_subelements:
       - "{{ system_fabric.compute_transp_nodes}}"
-      - "{{}}"      
+      - "{{pnics}}"      
       # - "{{ lookup('dict', userssystem_fabric.compute_transp_nodes.pnics) }}"
     when: item.0.switch_type == 'NVDS'    
