--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -237,7 +237,7 @@
           #   uplink_name: "uplink-1"
           ip_assignment_spec:
             resource_type: "StaticIpPoolSpec"
-            ip_pool_name: "IPPool-IPV4-1"
+            ip_pool_name: "NSX_TEP_POOL"
           # vmk_install_migration:
           # - device_name: vmk0
           #   destination_network_name: "ls_vmk_Mgmt"
