--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -232,7 +232,7 @@
           host_switch_name: "NSXT-NVDS"
           host_switch_mode: "STANDARD"
           is_migrate_pnics: "False"
-          pnics: |
+          pnics: >
             "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
           # pnics: "{{item.2|dict2items(key_name='uplink_name', value_name='device_name')}}"
           # - device_name: "item[1]"
