--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -209,6 +209,8 @@
 #   #     msg: "{{item.1}}"
 #   #   loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
 
+  # - set_fact:
+       
 
   - name: Create NSX-T transport node profile for clusters with NVDS
     nsxt_transport_node_profiles:
@@ -232,7 +234,7 @@
           host_switch_name: "NSXT-NVDS"
           host_switch_mode: "STANDARD"
           is_migrate_pnics: "False"
-          pnics: >
+          pnics:
             "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
           # pnics: "{{item.2|dict2items(key_name='uplink_name', value_name='device_name')}}"
           # - device_name: "item[1]"
