--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -209,46 +209,50 @@
 #   #     msg: "{{item.1}}"
 #   #   loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
 
-  # - set_fact:
-       
-
-  - name: Create NSX-T transport node profile for clusters with NVDS
-    nsxt_transport_node_profiles:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      resource_type: TransportNodeProfile
-      display_name: "{{ item[0].transport_node_profile_name }}"
-      description: "Transport Node Profile {{ item[0].transport_node_profile_name }}"
-      host_switch_spec:
-        resource_type: StandardHostSwitchSpec
-        host_switches:
-        - host_switch_profiles:
-          - name: "UplinkProfl-{{item[0].uplink_profile}}"
-            type: "UplinkHostSwitchProfile"
-          - name: LLDP [Send Packet Enabled]
-            type: LldpHostSwitchProfile
-          - name: nsx-default-nioc-hostswitch-profile
-            type: NiocProfile                      
-          host_switch_name: "NSXT-NVDS"
-          host_switch_mode: "STANDARD"
-          is_migrate_pnics: "False"
-          pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
-          # pnics: "{{item.2|dict2items(key_name='uplink_name', value_name='device_name')}}"
-          # - device_name: "item[1]"
-          #   uplink_name: "uplink-1"
-          ip_assignment_spec:
-            resource_type: "StaticIpPoolSpec"
-            ip_pool_name: "NSX_TEP_POOL"
-          # vmk_install_migration:
-          # - device_name: vmk0
-          #   destination_network_name: "ls_vmk_Mgmt"
-      transport_zone_endpoints:
-      - transport_zone_name: "TZ_Overlay"
-      - transport_zone_name: "TZ_Vlan"
-      state: present
-    loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
-
+  - set_fact:
+        tn_tmp_nic_list = "{{tn_tmp_nic_list|default([]) + item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
+      loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}" 
     when: (item.0.switch_type == 'NVDS') and (item.0.transport_node_profile_name is defined) and (item.0.nics is defined)
+    register: "my_tmp_{{item.0.transport_node_profile_name}}"
+
+
+  # - name: Create NSX-T transport node profile for clusters with NVDS
+  #   nsxt_transport_node_profiles:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     resource_type: TransportNodeProfile
+  #     display_name: "{{ item[0].transport_node_profile_name }}"
+  #     description: "Transport Node Profile {{ item[0].transport_node_profile_name }}"
+  #     host_switch_spec:
+  #       resource_type: StandardHostSwitchSpec
+  #       host_switches:
+  #       - host_switch_profiles:
+  #         - name: "UplinkProfl-{{item[0].uplink_profile}}"
+  #           type: "UplinkHostSwitchProfile"
+  #         - name: LLDP [Send Packet Enabled]
+  #           type: LldpHostSwitchProfile
+  #         - name: nsx-default-nioc-hostswitch-profile
+  #           type: NiocProfile                      
+  #         host_switch_name: "NSXT-NVDS"
+  #         host_switch_mode: "STANDARD"
+  #         is_migrate_pnics: "False"
+  #         pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
+  #         # pnics: "{{item.2|dict2items(key_name='uplink_name', value_name='device_name')}}"
+  #         # - device_name: "item[1]"
+  #         #   uplink_name: "uplink-1"
+  #         ip_assignment_spec:
+  #           resource_type: "StaticIpPoolSpec"
+  #           ip_pool_name: "NSX_TEP_POOL"
+  #         # vmk_install_migration:
+  #         # - device_name: vmk0
+  #         #   destination_network_name: "ls_vmk_Mgmt"
+  #     transport_zone_endpoints:
+  #     - transport_zone_name: "TZ_Overlay"
+  #     - transport_zone_name: "TZ_Vlan"
+  #     state: present
+  #   loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
+
+  #   when: (item.0.switch_type == 'NVDS') and (item.0.transport_node_profile_name is defined) and (item.0.nics is defined)
 
