--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -251,6 +251,13 @@
   #   loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
   #   when: (item.0.switch_type == 'NVDS') and (item.0.transport_node_profile_name is defined) and (item.0.nics is defined)
 
+
+
+  - debug:
+      msg: "{{item.nics}}   type is: {{item.nics|type_debug}}"
+    loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
+    when: (item.switch_type == 'NVDS') and (item.transport_node_profile_name is defined) and (item.nics is defined)   
+
   - name: Create NSX-T transport node profile for clusters with NVDS
     nsxt_transport_node_profiles:
       hostname: "{{nsxt_ip}}"
