--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -290,11 +290,67 @@
           # vmk_install_migration:
           # - device_name: vmk0
           #   destination_network_name: "ls_vmk_Mgmt"
-      transport_zone_endpoints:
-      - transport_zone_name: "TZ_Overlay"
-      - transport_zone_name: "TZ_Vlan"
+        transport_zone_endpoints:
+        - transport_zone_name: "TZ_Overlay"
+        - transport_zone_name: "TZ_Vlan"
       state: present
     # loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
     loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
     when: (item.switch_type == 'NVDS') and (item.transport_node_profile_name is defined) and (item.nics is defined)
+
+#################### to be tested in vsphere 7
+  # - name: Create NSX-T transport node profile for clusters with VDS7
+  #   nsxt_transport_node_profiles:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     resource_type: TransportNodeProfile
+  #     display_name: "{{ item.transport_node_profile_name }}"
+  #     description: "Transport Node Profile {{ item.transport_node_profile_name }}"
+  #     host_switch_spec:
+  #       resource_type: StandardHostSwitchSpec
+  #       host_switches:
+  #       - host_switch_profiles:
+  #         - name: "UplinkProfl-{{item.uplink_profile}}"
+  #           type: "UplinkHostSwitchProfile"
+  #         - name: LLDP [Send Packet Enabled]
+  #           type: LldpHostSwitchProfile
+  #         - name: nsx-default-nioc-hostswitch-profile
+  #           type: NiocProfile                      
+  #         host_switch_name: "NSXT-NVDS"
+  #         host_switch_mode: "STANDARD"
+  #         is_migrate_pnics: "False"
+  #         pnics: "{{item.nics}}"
+  #         # pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
+  #         # - device_name: "item[1]"
+  #         #   uplink_name: "uplink-1"
+  #         ip_assignment_spec:
+  #           resource_type: "StaticIpPoolSpec"
+  #           ip_pool_name: "NSX_TEP_POOL"
+  #         # vmk_install_migration:
+  #         # - device_name: vmk0
+  #         #   destination_network_name: "ls_vmk_Mgmt"
+  #       transport_zone_endpoints:
+  #       - transport_zone_name: "TZ_Overlay"
+  #       - transport_zone_name: "TZ_Vlan"
+  #     state: present
+  #   # loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
+  #   loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
+  #   when: (item.switch_type == 'VDS') and (item.transport_node_profile_name is defined) and (item.nics is defined) and (item.vcenter) and (item.cluster_name) and (item.vds_name)
+
+
+  # - name: Create transport node collection
+  #     nsxt_transport_node_collections:
+  #       hostname: "{{hostname}}"
+  #       username: "{{username}}"
+  #       password: "{{password}}"
+  #       validate_certs: False
+  #       display_name: "TNC1"
+  #       resource_type: "TransportNodeCollection"
+  #       description: "Transport Node Collections 1"
+  #       compute_manager_name: "VC1"
+  #       cluster_name: "cl1"
+  #       transport_node_profile_name: "TNP1"
+  #       state: present
 
