--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -308,4 +308,4 @@
       transport_node_profile_name: "{{ item.transport_node_profile_name }}"
       state: present
     loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
-    when: (item.cluster_name is !='') and (item.transport_node_profile_name is defined) and (item.nics is defined)
+    when: (item.cluster_name !='' ) and (item.transport_node_profile_name is defined) and (item.nics is defined)
