--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -345,6 +345,7 @@
         resource_type: "HostNode"
         display_name: "{{item.node_ip}}"
         ip_addresses: ["{{item.node_ip}}"]
+        discovered_ip_addresses: ["{{item.node_ip}}"]
         os_type: "ESXI"
         managed_by_server: "{{item.vcenter}}"
         # os_version: "6.5.0"
